# DL-voice-typing

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
__tests__/: floating.test.js  settings.test.js
lib/: settings-utils.js
scripts/: build_pgo.ps1  build_vulkan.ps1
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json  floating.json  main.json  review.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  crypto.rs  data_saving.rs  error.rs  lib.rs  main.rs  perf.rs  platform.rs  realtime.rs  state.rs  tray.rs  util.rs  watchdog.rs  win32.rs
src-tauri/src/audio/: mod.rs  rms.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: config_cmd.rs  download.rs  hotkey_pipeline.rs  misc_cmd.rs  mod.rs  pipeline_state.rs  review.rs  review_provider.rs  text_injector.rs  window_controller.rs
src-tauri/src/hotkey/: mod.rs  windows.rs
src-tauri/src/llm/: mod.rs  prompt.rs
src-tauri/src/speech/: mock.rs  mod.rs  whisper.rs
src-tauri/src/tests/: pipeline_integration_test.rs  pipeline_lifecycle_test.rs  pipeline_test.rs
ui/: common.css  floating.css  floating.html  floating.js  index.html  review.css  review.html  review.js  settings.css  settings.html  settings.js
ui/__tests__/: settings.test.js
ui/lib/: floating-utils.js  settings-utils.js
