[package]
name = "dl-voice-typing"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
cpal = "0.15"
whisper-rs = { version = "0.12", optional = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
] }
dirs = "6"
rand = "0.9"

[features]
default = []
whisper = ["whisper-rs"]

[build-dependencies]
tauri-build = { version = "2" }

[profile.release]
lto = "thin"
strip = true
