[package]
name = "dl-voice-typing"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
cpal = "0.15"
whisper-rs = { version = "0.16", optional = true, features = ["vulkan"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Time",
] }
dirs = "6"
tauri-plugin-dialog = "2"
rand = "0.9"

[features]
default = ["whisper"]
whisper = ["whisper-rs"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cmake = "0.1"

[profile.release]
lto = "thin"
strip = true
