[package]
name = "dl-voice-typing"
version = "26.4.20"
edition = "2024"
rust-version = "1.85"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
cpal = "0.15"
whisper-rs = { version = "0.16", optional = true, features = ["vulkan"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
thiserror = "2"
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Time",
    "Win32_Security_Cryptography",
] }
base64 = "0.22"
dirs = "6"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
rand = "0.9"
image = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["local-offset", "formatting"] }

[features]
default = ["whisper", "devtools"]
whisper = ["whisper-rs"]
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cmake = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
